2022-02-08  Simon Fraser  <simon.fraser@apple.com>

        Rename ImageBufferShareableIOSurfaceBackend to ImageBufferRemoteIOSurfaceBackend
        https://bugs.webkit.org/show_bug.cgi?id=236267

        Reviewed by Tim Horton.

        Most of the functions on ImageBufferShareableIOSurfaceBackend are stubs that RELEASE_ASSERT;
        it's "remote" role is more important that it's "shareable" role, so rename it.

        * SourcesCocoa.txt:
        * WebKit.xcodeproj/project.pbxproj:
        * WebProcess/GPU/graphics/PlatformImageBufferShareableBackend.h:
        * WebProcess/GPU/graphics/cocoa/ImageBufferRemoteIOSurfaceBackend.cpp: Renamed from Source/WebKit/WebProcess/GPU/graphics/cocoa/ImageBufferShareableIOSurfaceBackend.cpp.
        (WebKit::ImageBufferRemoteIOSurfaceBackend::calculateSafeBackendSize):
        (WebKit::ImageBufferRemoteIOSurfaceBackend::calculateMemoryCost):
        (WebKit::ImageBufferRemoteIOSurfaceBackend::calculateExternalMemoryCost):
        (WebKit::ImageBufferRemoteIOSurfaceBackend::create):
        (WebKit::ImageBufferRemoteIOSurfaceBackend::createImageBufferBackendHandle const):
        (WebKit::ImageBufferRemoteIOSurfaceBackend::context const):
        (WebKit::ImageBufferRemoteIOSurfaceBackend::backendSize const):
        (WebKit::ImageBufferRemoteIOSurfaceBackend::bytesPerRow const):
        (WebKit::ImageBufferRemoteIOSurfaceBackend::copyNativeImage const):
        (WebKit::ImageBufferRemoteIOSurfaceBackend::copyImage const):
        (WebKit::ImageBufferRemoteIOSurfaceBackend::draw):
        (WebKit::ImageBufferRemoteIOSurfaceBackend::drawPattern):
        (WebKit::ImageBufferRemoteIOSurfaceBackend::toDataURL const):
        (WebKit::ImageBufferRemoteIOSurfaceBackend::toData const):
        (WebKit::ImageBufferRemoteIOSurfaceBackend::getPixelBuffer const):
        (WebKit::ImageBufferRemoteIOSurfaceBackend::putPixelBuffer):