@@ -1,3 +1,15 @@
+2022-02-08  Alex Christensen  <achristensen@webkit.org>
+
+        Reduce allocations and increase thread safety of constructedPath
+        https://bugs.webkit.org/show_bug.cgi?id=236286
+        <rdar://86904276>
+
+        Reviewed by Chris Dumez.
+
+        * UIProcess/API/APIContentRuleListStore.cpp:
+        (API::constructedPathPrefix):
+        (API::ContentRuleListStore::getAvailableContentRuleListIdentifiers):
+
 2022-02-08  Simon Fraser  <simon.fraser@apple.com>
 
         Rename ImageBufferShareableIOSurfaceBackend to ImageBufferRemoteIOSurfaceBackend
